# astro-color

./: README.md  pyproject.toml
src/astro_color/: __init__.py  auxiliary.py
src/astrocolor/: __init__.py  algebra.py  color.py  convolution.py  core.py  data_manager.py  errors.py  filters.py  photospectral_objects.py  physical_models.py  spectral_objects.py  spectral_reconstruction.py
src/astrocolor/data/: Sun_CALSPEC.npz  Vega_CALSPEC.npz
